force-app/main/default/objects/Translation__c/Translation__c.object-meta.xml
<CustomObject>
    <label>Translation</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RowNum</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>