force-app/main/default/objects/Translation__c/fields/FieldApi__c.field-meta.xml
<CustomField>
    <fullName>FieldApi__c</fullName>
    <label>FieldApi</label>
    <length>80</length>
    <type>Text</type>
</CustomField>