force-app/main/default/objects/Translation__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Index</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>