force-app/main/default/objects/Translation__c/fields/LangCode__c.field-meta.xml
<CustomField>
    <fullName>LangCode__c</fullName>
    <label>LangCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LangSys</valueSetName>
    </valueSet>
</CustomField>