force-app/main/default/objects/Translation__c/fields/ObjectApi__c.field-meta.xml
<CustomField>
    <fullName>ObjectApi__c</fullName>
    <label>ObjectApi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>