force-app/main/default/objects/Translation__c/fields/RecordExternalId__c.field-meta.xml
<CustomField>
    <fullName>RecordExternalId__c</fullName>
    <label>RecordExternalId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>